--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>discovery</module>
         <module>bmw</module>
         <module>getway</module>
+        <module>config</module>
     </modules>
 
     <properties>
